--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- しこしこモード セクション -->
         <section id="shikoshikoModeSection" class="mode-section active">
             <div class="mode-content-wrapper">
+                <!-- 設定エリア (アコーディオン等で開閉) -->
                 <div class="settings-panel" id="shikoshikoSettingsPanel">
                     <button class="accordion-toggle" id="shikoshikoSettingsToggle" aria-expanded="false">
                         設定 <span class="toggle-icon">▼</span>
@@ -31,6 +32,7 @@
                         <div class="setting-group">
                             <h4>メンバー出現率</h4>
                             <div class="slider-container member-sliders" id="shikoshikoMemberSliders">
+                                <!-- js/ui/components.js または shikoshiko.js でメンバー毎のスライダーを生成 -->
                                 <p>メンバー読み込み中...</p>
                             </div>
                             <p class="selection-note">数値が高いほど出やすくなります (0は出ません)</p>
@@ -52,7 +54,8 @@
                                 <span class="slider-value" id="pulseBrightnessValue">3</span>
                             </div>
                         </div>
-                        <div class="setting-group" id="shikoshikoStickerSettingsGroup" style="display:none;">
+                         <!-- ステッカー関連UI (残す場合) -->
+                        <div class="setting-group" id="shikoshikoStickerSettingsGroup" style="display:none;"> <!-- 初期非表示 or 条件で表示 -->
                             <h4>ステッカー</h4>
                             <div id="shikoshikoStickerChoiceContainer" class="sticker-choice-container">
                                 <p class="sticker-loading">ステッカー読込中...</p>
@@ -62,6 +65,7 @@
                     </div>
                 </div>
 
+                <!-- ゲーム表示エリア -->
                 <div class="game-display-area" id="shikoshikoGameArea">
                     <div class="game-header">
                         <h2 id="shikoshikoMemberName">メンバー名</h2>
@@ -77,6 +81,7 @@
                     </div>
                     <div class="member-image-container" id="shikoshikoMemberImageContainer">
                         <img id="shikoshikoMemberImage" src="images/placeholder.png" alt="メンバー画像">
+                        <!-- 貼り付けられたステッカーはこのエリアに絶対配置される -->
                     </div>
                     <div class="shiko-animation-container" id="shikoAnimationContainer">
                         <!-- ★★★ 日本語ファイル名を変更した場合の例 ★★★ -->
@@ -85,6 +90,7 @@
                     </div>
                 </div>
 
+                <!-- 操作ボタンエリア -->
                 <div class="game-controls-area" id="shikoshikoControlsArea">
                     <button id="shikoshikoStartButton" class="action-button primary">開始</button>
                     <button id="shikoshikoFinishButton" class="action-button secondary" style="display: none;">フィニッシュ</button>
@@ -93,6 +99,7 @@
             </div>
         </section>
 
+        <!-- カウンターセクション -->
         <section id="counterSection" class="mode-section" style="display:none;">
             <div class="mode-content-wrapper">
                 <h2>回数カウンター</h2>
@@ -101,11 +108,13 @@
                     <button id="decreaseModeButton" class="counter-mode-button">減らすモード OFF</button>
                 </div>
                 <div class="counter-grid" id="counterGrid">
+                    <!-- js/modes/counter.js でメンバー毎のカウンターアイテムを生成 -->
                     <p class="loading-message">カウンター読み込み中...</p>
                 </div>
             </div>
         </section>
 
+        <!-- ギャラリーセクション -->
         <section id="gallerySection" class="mode-section" style="display:none;">
             <div class="mode-content-wrapper">
                 <h2>ギャラリー</h2>
@@ -113,6 +122,7 @@
                     <label for="galleryMemberFilter">メンバー:</label>
                     <select id="galleryMemberFilter">
                         <option value="all">全員</option>
+                        <!-- js/modes/gallery.js または ui/components.js でメンバーオプションを生成 -->
                     </select>
                     <label for="galleryTypeFilter">タイプ:</label>
                     <select id="galleryTypeFilter">
@@ -127,6 +137,7 @@
                     <button id="galleryRefreshButton" class="action-button small">更新</button>
                 </div>
                 <div id="galleryGrid" class="gallery-grid">
+                    <!-- js/modes/gallery.js で画像アイテムを生成 -->
                     <p class="loading-message gallery-loading">ギャラリーを読み込み中...</p>
                 </div>
             </div>
@@ -138,17 +149,29 @@
         <p>© ONSP Project 2024</p>
     </footer>
 
+    <!-- JavaScriptファイル読み込み (順番重要) -->
+    <!-- 外部ライブラリ (もしあれば) -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script> -->
+
+    <!-- 設定ファイル -->
     <script src="config.js"></script>
+    <!-- <script src="config_secret.js"></script> --> <!-- APIキーなど秘密情報はHTML直書きせず、環境変数などで管理推奨 -->
+
+    <!-- ユーティリティ & サービス -->
     <script src="js/utils/helpers.js"></script>
     <script src="js/services/storage.js"></script>
+
+    <!-- UI関連 -->
     <script src="js/ui/dom_utils.js"></script>
     <script src="js/ui/components.js"></script>
+
+    <!-- 各モードのロジック -->
     <script src="js/modes/shikoshiko.js"></script>
     <script src="js/modes/counter.js"></script>
     <script src="js/modes/gallery.js"></script>
+
+    <!-- アプリケーションメイン -->
     <script src="js/app.js"></script>
-</body>
-</html>
 
 </body>
 </html>
