--- a/index.html
+++ b/index.html
@@ -5,25 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONSP Project</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/placeholder.png"> <!-- ファビコンパス -->
+    <link rel="icon" href="images/placeholder.png">
 </head>
 <body>
 
-    <header class="app-header">
-        <h1>ONSP Project (仮)</h1>
-        <nav id="tabNavigation" class="tab-container">
-            <button class="tab-button active" data-tab-target="#shikoshikoModeSection">しこしこ</button>
-            <button class="tab-button" data-tab-target="#counterSection">カウンター</button>
-            <button class="tab-button" data-tab-target="#gallerySection">ギャラリー</button>
-        </nav>
-    </header>
+    <nav id="tabNavigation" class="tab-container">
+        <button class="tab-button active" data-tab-target="#shikoshikoModeSection">しこしこ</button>
+        <button class="tab-button" data-tab-target="#counterSection">カウンター</button>
+        <button class="tab-button" data-tab-target="#gallerySection">ギャラリー</button>
+    </nav>
 
     <main id="appContainer" class="app-main-content">
 
         <!-- しこしこモード セクション -->
         <section id="shikoshikoModeSection" class="mode-section active">
             <div class="mode-content-wrapper">
-                <!-- 設定エリア (アコーディオン等で開閉) -->
                 <div class="settings-panel" id="shikoshikoSettingsPanel">
                     <button class="accordion-toggle" id="shikoshikoSettingsToggle" aria-expanded="false">
                         設定 <span class="toggle-icon">▼</span>
@@ -32,19 +28,9 @@
                         <div class="setting-group">
                             <h4>メンバー出現率</h4>
                             <div class="slider-container member-sliders" id="shikoshikoMemberSliders">
-                                <!-- js/ui/components.js または shikoshiko.js でメンバー毎のスライダーを生成 -->
                                 <p>メンバー読み込み中...</p>
                             </div>
                             <p class="selection-note">数値が高いほど出やすくなります (0は出ません)</p>
-                        </div>
-                        <div class="setting-group">
-                            <h4>持続時間</h4>
-                            <div class="duration-settings">
-                                <label for="durationMinutes">分:</label>
-                                <input type="number" id="durationMinutes" min="0" max="59" value="0">
-                                <label for="durationSeconds">秒:</label>
-                                <input type="number" id="durationSeconds" min="0" max="59" value="30">
-                            </div>
                         </div>
                         <div class="setting-group">
                             <h4>背景エフェクト</h4>
@@ -54,8 +40,14 @@
                                 <span class="slider-value" id="pulseBrightnessValue">3</span>
                             </div>
                         </div>
-                         <!-- ステッカー関連UI (残す場合) -->
-                        <div class="setting-group" id="shikoshikoStickerSettingsGroup" style="display:none;"> <!-- 初期非表示 or 条件で表示 -->
+                        <div class="setting-group">
+                            <h4>BPM設定 (固定)</h4>
+                            <div class="bpm-setting">
+                                <label for="fixedBpmInput">BPM:</label>
+                                <input type="number" id="fixedBpmInput" min="30" max="300" value="120">
+                            </div>
+                        </div>
+                        <div class="setting-group" id="shikoshikoStickerSettingsGroup" style="display:none;">
                             <h4>ステッカー</h4>
                             <div id="shikoshikoStickerChoiceContainer" class="sticker-choice-container">
                                 <p class="sticker-loading">ステッカー読込中...</p>
@@ -65,41 +57,35 @@
                     </div>
                 </div>
 
-                <!-- ゲーム表示エリア -->
                 <div class="game-display-area" id="shikoshikoGameArea">
                     <div class="game-header">
                         <h2 id="shikoshikoMemberName">メンバー名</h2>
                         <button class="weak-point-toggle icon-button" id="shikoshikoWeakPointButton" title="弱点登録/解除" data-relpath="" style="display: none;">☆</button>
                     </div>
-                    <div class="time-info">
-                        <div id="shikoshikoTimerDisplay">00:00</div>
-                        <div class="progress-bar-container">
-                            <div class="progress-bar-outer">
-                                <div class="progress-bar-inner" id="shikoshikoProgressBarInner" style="width: 0%;"></div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="member-image-container" id="shikoshikoMemberImageContainer">
                         <img id="shikoshikoMemberImage" src="images/placeholder.png" alt="メンバー画像">
-                        <!-- 貼り付けられたステッカーはこのエリアに絶対配置される -->
                     </div>
+                    <!-- セリフと画像タグ表示エリア -->
+                    <div class="image-tags-container" id="shikoshikoImageTagsContainer" style="display: none;">
+                        <!-- JSで画像タグを生成 -->
+                    </div>
+                    <p id="shikoshikoMemberQuote" class="member-quote">ここにセリフが表示されます</p>
+                    <!-- ここまで -->
                     <div class="shiko-animation-container" id="shikoAnimationContainer">
-                        <!-- ★★★ 日本語ファイル名を変更した場合の例 ★★★ -->
                         <img src="images/sao.png" alt="竿" id="saoImage" class="sao-image">
                         <img src="images/shikoshiko_anim.png" alt="しこしこ" id="shikoshikoAnimationImage" class="shikoshiko-image">
                     </div>
                 </div>
 
-                <!-- 操作ボタンエリア -->
-                <div class="game-controls-area" id="shikoshikoControlsArea">
-                    <button id="shikoshikoStartButton" class="action-button primary">開始</button>
-                    <button id="shikoshikoFinishButton" class="action-button secondary" style="display: none;">フィニッシュ</button>
-                    <button id="shikoshikoSkipButton" class="action-button small" style="display: none;">スキップ (Space/Enter)</button>
+                <!-- 操作ボタンエリア (スマホでは下部固定) -->
+                <div class="game-controls-area-sticky-footer" id="shikoshikoControlsArea">
+                    <button id="shikoshikoSkipButton" class="action-button secondary fixed-left" style="display: none;">スキップ</button>
+                    <button id="shikoshikoStartButton" class="action-button primary main-action">開始</button>
+                    <button id="shikoshikoFinishButton" class="action-button primary fixed-right" style="display: none;">フィニッシュ</button>
                 </div>
             </div>
         </section>
 
-        <!-- カウンターセクション -->
         <section id="counterSection" class="mode-section" style="display:none;">
             <div class="mode-content-wrapper">
                 <h2>回数カウンター</h2>
@@ -108,13 +94,11 @@
                     <button id="decreaseModeButton" class="counter-mode-button">減らすモード OFF</button>
                 </div>
                 <div class="counter-grid" id="counterGrid">
-                    <!-- js/modes/counter.js でメンバー毎のカウンターアイテムを生成 -->
                     <p class="loading-message">カウンター読み込み中...</p>
                 </div>
             </div>
         </section>
 
-        <!-- ギャラリーセクション -->
         <section id="gallerySection" class="mode-section" style="display:none;">
             <div class="mode-content-wrapper">
                 <h2>ギャラリー</h2>
@@ -122,7 +106,6 @@
                     <label for="galleryMemberFilter">メンバー:</label>
                     <select id="galleryMemberFilter">
                         <option value="all">全員</option>
-                        <!-- js/modes/gallery.js または ui/components.js でメンバーオプションを生成 -->
                     </select>
                     <label for="galleryTypeFilter">タイプ:</label>
                     <select id="galleryTypeFilter">
@@ -137,41 +120,20 @@
                     <button id="galleryRefreshButton" class="action-button small">更新</button>
                 </div>
                 <div id="galleryGrid" class="gallery-grid">
-                    <!-- js/modes/gallery.js で画像アイテムを生成 -->
                     <p class="loading-message gallery-loading">ギャラリーを読み込み中...</p>
                 </div>
             </div>
         </section>
-
     </main>
 
-    <footer class="app-footer">
-        <p>© ONSP Project 2024</p>
-    </footer>
-
-    <!-- JavaScriptファイル読み込み (順番重要) -->
-    <!-- 外部ライブラリ (もしあれば) -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script> -->
-
-    <!-- 設定ファイル -->
     <script src="config.js"></script>
-    <!-- <script src="config_secret.js"></script> --> <!-- APIキーなど秘密情報はHTML直書きせず、環境変数などで管理推奨 -->
-
-    <!-- ユーティリティ & サービス -->
     <script src="js/utils/helpers.js"></script>
     <script src="js/services/storage.js"></script>
-
-    <!-- UI関連 -->
     <script src="js/ui/dom_utils.js"></script>
     <script src="js/ui/components.js"></script>
-
-    <!-- 各モードのロジック -->
     <script src="js/modes/shikoshiko.js"></script>
     <script src="js/modes/counter.js"></script>
     <script src="js/modes/gallery.js"></script>
-
-    <!-- アプリケーションメイン -->
     <script src="js/app.js"></script>
-
 </body>
 </html>
