--- a/index.html
+++ b/index.html
@@ -13,59 +13,65 @@
 
         <!-- しこしこモード セクション -->
         <section id="shikoshikoModeSection" class="mode-section active">
-            <!-- mode-content-wrapper は削除し、直接 shikoshiko-tiktok-ui でレイアウト -->
-            <div class="shikoshiko-tiktok-ui">
+            <div class="shikoshiko-layout-container">
 
-                <!-- 上部コンテンツエリア (画像、サイドパネル、設定ボタン) -->
-                <div class="tiktok-upper-content">
-                    <div class="tiktok-left-panel">
-                        <div class="tiktok-profile-icon-container">
-                            <img id="shikoshikoMemberProfileIcon" src="images/placeholder.png" alt="Member Icon" class="tiktok-profile-icon">
-                        </div>
-                        <button class="tiktok-action-button tiktok-weak-point-button" id="shikoshikoWeakPointButton" title="弱点登録/解除" data-relpath="">
-                            <span class="tiktok-icon">☆</span>
-                            <span class="tiktok-count" id="shikoshikoWeakPointCount"></span>
-                        </button>
-                    </div>
-
-                    <div class="member-image-container tiktok-image-main" id="shikoshikoMemberImageContainer">
+                <!-- BOX1: 上部メインエリア (画像、サイド情報、設定ボタン) -->
+                <div class="shikoshiko-box1">
+                    <div class="member-image-container main-image-area" id="shikoshikoMemberImageContainer">
                         <img id="shikoshikoMemberImage" src="images/placeholder.png" alt="メンバー画像">
-                        <!-- 貼り付けられたステッカー -->
+                        <!-- 貼り付けられたステッカーはここにJSで追加 -->
                     </div>
 
-                    <div class="shiko-animation-container tiktok-shiko-animation" id="shikoAnimationContainer">
+                    <!-- 左サイド情報パネル (TikTok風アイコンなど) -->
+                    <div class="side-info-panel left-panel">
+                        <div class="profile-icon-wrapper">
+                            <img id="shikoshikoMemberProfileIcon" src="images/placeholder.png" alt="Member Icon" class="profile-icon">
+                        </div>
+                        <button class="action-icon-button weak-point-button" id="shikoshikoWeakPointButton" title="弱点登録/解除" data-relpath="">
+                            <span class="icon-display">☆</span> <!-- ☆ or ★ -->
+                            <!-- <span class="count-display" id="shikoshikoWeakPointCount"></span> -->
+                        </button>
+                        <!-- 他のアイコンボタンが必要ならここに追加 -->
+                    </div>
+
+                    <!-- 右上設定ボタン -->
+                    <button class="settings-button-右上" id="openShikoshikoSettingsModal">⚙️</button>
+                </div>
+
+                <!-- セリフとアニメーションのコンテナ -->
+                <div class="serif-animation-container">
+                    <div class="serif-area">
+                        <div class="image-tags-container" id="shikoshikoImageTagsContainer" style="display: none;">
+                            <!-- JSで画像タグを生成 -->
+                        </div>
+                        <p id="shikoshikoMemberQuote" class="member-quote">ここにセリフが表示されます</p>
+                    </div>
+                    <div class="animation-area" id="shikoAnimationContainer">
                         <img src="images/sao.png" alt="竿" id="saoImage" class="sao-image">
                         <img src="images/shikoshiko_anim.png" alt="しこしこ" id="shikoshikoAnimationImage" class="shikoshiko-image">
                     </div>
-
-                    <button class="tiktok-settings-button" id="openShikoshikoSettingsModal">⚙️</button>
                 </div>
 
-                <!-- 下部コンテンツエリア (情報、コントロール、タブナビ) -->
-                <div class="tiktok-lower-content">
-                    <div class="tiktok-bottom-info">
-                        <div class="image-tags-container" id="shikoshikoImageTagsContainer" style="display: none;"></div>
-                        <p id="shikoshikoMemberQuote" class="member-quote tiktok-quote">ここにセリフが表示されます</p>
+                <!-- BOX2: 下部コントロールエリア (ボタン、タブナビ) -->
+                <div class="shikoshiko-box2">
+                    <div class="main-controls" id="shikoshikoControlsArea">
+                        <button id="shikoshikoSkipButton" class="control-button skip-button" style="display: none;">スキップ</button>
+                        <button id="shikoshikoStartButton" class="control-button start-finish-button">開始</button>
+                        <button id="shikoshikoFinishButton" class="control-button start-finish-button" style="display: none;">フィニッシュ</button>
                     </div>
-
-                    <div class="game-controls-area-sticky-footer shikoshiko-footer-controls" id="shikoshikoControlsArea">
-                        <button id="shikoshikoSkipButton" class="action-button secondary fixed-left" style="display: none;">スキップ</button>
-                        <button id="shikoshikoStartButton" class="action-button primary main-action">開始</button>
-                        <button id="shikoshikoFinishButton" class="action-button primary fixed-right" style="display: none;">フィニッシュ</button>
-                    </div>
-
-                    <nav id="tabNavigation" class="tab-container-bottom-fixed"> <!-- タブナビをここへ移動 -->
+                    <nav id="tabNavigation" class="tab-navigation-area">
                         <button class="tab-button active" data-tab-target="#shikoshikoModeSection">しこしこ</button>
                         <button class="tab-button" data-tab-target="#counterSection">カウンター</button>
                         <button class="tab-button" data-tab-target="#gallerySection">ギャラリー</button>
                     </nav>
                 </div>
+
             </div>
         </section>
 
-        <!-- カウンターセクション -->
+        <!-- カウンターセクション (変更なし) -->
         <section id="counterSection" class="mode-section" style="display:none;">
-            <div class="mode-content-wrapper"> <!-- カウンターとギャラリーは従来の wrapper を使う -->
+            <div class="mode-content-wrapper">
                 <h2>回数カウンター</h2>
                 <p class="counter-instruction">画像をクリックするとカウントが増えます。</p>
                 <div class="counter-controls">
@@ -77,7 +83,7 @@
             </div>
         </section>
 
-        <!-- ギャラリーセクション -->
+        <!-- ギャラリーセクション (変更なし) -->
         <section id="gallerySection" class="mode-section" style="display:none;">
             <div class="mode-content-wrapper">
                 <h2>ギャラリー</h2>
@@ -100,7 +106,7 @@
 
     </main>
 
-    <!-- しこしこモード設定モーダル -->
+    <!-- しこしこモード設定モーダル (変更なし) -->
     <div id="shikoshikoSettingsModal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="modal-close-button" id="closeShikoshikoSettingsModal">×</span>
