--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                     </div>
                 </div>
 
-                <div class="shikoshiko-box2-controls-only"> <!-- 下部コントロールエリア (ボタンのみ) -->
+                <div class="shikoshiko-box2-controls-only">
                     <div class="main-controls" id="shikoshikoControlsArea">
-                        <button id="shikoshikoSkipButton" class="control-button skip-button" style="display: none;">スキップ</button>
-                        <button id="shikoshikoStartButton" class="control-button start-finish-button">開始</button>
-                        <button id="shikoshikoFinishButton" class="control-button start-finish-button" style="display: none;">フィニッシュ</button>
+                        <button id="shikoshikoSkipButton" class="control-button skip-button">スキップ</button>
+                        <button id="shikoshikoStartButton" class="control-button start-finish-button">一時停止</button> <!-- 初期テキスト変更 -->
+                        <button id="shikoshikoFinishButton" class="control-button start-finish-button">フィニッシュ</button>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
     </main>
 
-    <!-- しこしこモード設定モーダル (変更なし) -->
+    <!-- しこしこモード設定モーダル -->
     <div id="shikoshikoSettingsModal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="modal-close-button" id="closeShikoshikoSettingsModal">×</span>
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button id="saveShikoshikoSettingsButton" class="action-button primary">保存して閉じる</button>
+                <button id="saveShikoshikoSettingsButton" class="action-button primary">設定を保存</button> <!-- テキスト変更 -->
             </div>
         </div>
     </div>
